# task_tracker

./: .env.sample  README.md  pyproject.toml
config/: settings.py  urls.py
employees/: models.py  paginators.py  serializers.py  tests.py  urls.py  validators.py  views.py
employees/fixtures/: employees.json
employees/migrations/: 0001_initial.py  0002_alter_employee_tasks_completed.py
scripts/management/commands/: csu.py
tasks/: models.py  paginators.py  serializers.py  tests.py  urls.py  validators.py  views.py
tasks/fixtures/: tasks.json
tasks/migrations/: 0001_initial.py  0002_alter_task_completion_time.py
